--- a/Tubes.html
+++ b/Tubes.html
@@ -6,8 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tubes Grafkom</title>
     <style>
-        body {
+        body{
             margin: 0;
+            background: url('assets/suporter.png')no-repeat center center fixed;
+            background-position: bottom;
+            -webkit-background-size: cover;
+            -moz-background-size: cover;
+            -o-background-size: cover;
+            background-size: cover;
         }
     </style>
 </head>
