--- a/Tubes.html
+++ b/Tubes.html
@@ -19,6 +19,7 @@
 </head>
 <body>
     <script src="node_modules/three/build/three.js"></script>
+    <script src="node_modules/three/examples/js/controls/OrbitControls.js"></script>
     <script src="Tubes.js"></script>
 
 </body>
