--- a/Tubes.html
+++ b/Tubes.html
@@ -8,18 +8,19 @@
     <style>
         body{
             margin: 0;
-            background: url('assets/suporter.png')no-repeat center center fixed;
+            /* background: url('assets/suporter.png')no-repeat center center fixed;
             background-position: bottom;
             -webkit-background-size: cover;
             -moz-background-size: cover;
             -o-background-size: cover;
-            background-size: cover;
+            background-size: cover; */
         }
     </style>
 </head>
 <body>
     <script src="node_modules/three/build/three.js"></script>
     <script src="node_modules/three/examples/js/controls/OrbitControls.js"></script>
+    <script src="node_modules/three/examples/js/loaders/GLTFLoader.js"></script>
     <script src="Tubes.js"></script>
 
 </body>
