Update goal and miss

--- a/Tubes.html
+++ b/Tubes.html
@@ -9,12 +9,12 @@
         body{
             margin: 0;
             overflow: hidden;
-            /* background: url('assets/suporter.png')no-repeat center center fixed;
+            background: url('assets/suporter.png')no-repeat center center fixed;
             background-position: bottom;
             -webkit-background-size: cover;
             -moz-background-size: cover;
             -o-background-size: cover;
-            background-size: cover; */
+            background-size: cover;
         }
     </style>
 </head>
@@ -22,7 +22,8 @@
     <script src="node_modules/three/build/three.js"></script>
     <script src="node_modules/three/examples/js/controls/OrbitControls.js"></script>
     <script src="node_modules/three/examples/js/loaders/GLTFLoader.js"></script>
-    <script src="node_modules/three/examples/js/loaders/FBXLoader.js"></script>
+    <script src="node_modules/three/examples/js/loaders/FontLoader.js"></script>
+    <script src="node_modules/three/examples/js/geometries/TextGeometry.js"></script>
     <script src="node_modules/cannon/build/cannon.js"></script>
     <script src="node_modules/cannon/tools/threejs/CannonDebugRenderer.js"></script>
     <script src="Tubes.js"></script>
