menambahkan sound effect
menambahkan sound effect

--- a/Tubes.html
+++ b/Tubes.html
@@ -19,6 +19,18 @@
     </style>
 </head>
 <body>
+    <audio id="myAudio">
+        <source src="assets/sound/kickball.wav" type="audio/wav">
+      </audio>
+      <audio id="myAudio2">
+        <source src="assets/sound/siu.mp3" type="audio/mp3">
+      </audio>
+      <audio id="myAudio3">
+        <source src="assets/sound/miss.mp3" type="audio/mp3">
+      </audio>
+      <audio id="myAudio4">
+        <source src="assets/sound/crowd.mp3" type="audio/mp3">
+      </audio>
     <script src="node_modules/three/build/three.js"></script>
     <script src="node_modules/three/examples/js/controls/OrbitControls.js"></script>
     <script src="node_modules/three/examples/js/loaders/GLTFLoader.js"></script>
