--- a/Tubes.html
+++ b/Tubes.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tubes Grafkom</title>
+    <link href='https://fonts.googleapis.com/css?family=Lexend Deca' rel='stylesheet'>
     <style>
         body{
             margin: 0;
@@ -15,6 +16,15 @@
             -moz-background-size: cover;
             -o-background-size: cover;
             background-size: cover;
+        }
+        #startScreen{
+            padding-top: 20%;
+            min-height: 100%;
+            min-width: 100%;
+            background: rgba(0, 0, 0, .5);
+            display: inline-block;
+            text-align: center;
+            position:absolute;
         }
     </style>
 </head>
@@ -31,6 +41,9 @@
       <audio id="myAudio4">
         <source src="assets/sound/crowd.mp3" type="audio/mp3">
       </audio>
+      <div id="startScreen">
+        <h1 style="color: white"> CLICK TO PLAY </h1>
+      </div>
     <script src="node_modules/three/build/three.js"></script>
     <script src="node_modules/three/examples/js/controls/OrbitControls.js"></script>
     <script src="node_modules/three/examples/js/loaders/GLTFLoader.js"></script>
